# epoll-shim

./: .cirrus.yml  Makefile  README.md  Version.map  meson.build
src/: CMakeLists.txt  epoll-shim.pc.in  timerfd_ctx.h
test/: epoll-test.c  eventfd-ctx-test.c  timerfd-test.c
test/microatf/: atf-c.h
